--- a/styles.css
+++ b/styles.css
@@ -147,18 +147,23 @@ body{
 
 .message{
   text-align: center;
-  font-family: "Roboto", sans-serif;
+
 }
 
-.message-title{
-  font-size: 30px;
-  font-weight: 800;
-  color: yellow;
+ .message-title{
+  font-family: 'Pacifico', sans-serif;
+  font-size: 35px;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
   margin: 15px 0px;
-}
+} 
+
+
+
 
 .message-subtitle{
-  font-size: 20px;
-  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  font-size: 19px;
+  font-weight: 400;
   color: white;
 }
